# POC-basha

./: CMakeLists.txt  README.md
include/: myclass.h
src/: main.cpp  myclass.cpp
